flacdec: also try upstream first for duration query in DEFAULT format

https://bugzilla.gnome.org/show_bug.cgi?id=650785